objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>HQ_Market__c</fullName>
        <description>Account's HQ Market</description>
        <formula>HYPERLINK("https://wework.lightning.force.com/lightning/r/Market__c/" + Account.Account_Market__c + "/view", Account.Account_Market__c)</formula>
        <label>HQ Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_by_WeWork__c</fullName>
        <formula>Building__r.HQ_by_WeWork__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ by WeWork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Status__c</fullName>
        <label>Hold Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Waitlist</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hosted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hosted By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Hosted By)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <label>How Did You Hear About Us</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>WeWork Member Referral</fullName>
                </value>
                <value>
                    <fullName>In the news</fullName>
                </value>
                <value>
                    <fullName>Google search</fullName>
                </value>
                <value>
                    <fullName>Desk listing site</fullName>
                </value>
                <value>
                    <fullName>Sign on the Building / Walk By</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Yelp</fullName>
                </value>
                <value>
                    <fullName>Google AdWords</fullName>
                </value>
                <value>
                    <fullName>Partnership Referral</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_long_you_plan_to_work_at_WeWork__c</fullName>
        <label>How long you plan to work at WeWork</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-2 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>More than 6 months / forever!</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Rooms__c</fullName>
        <label>IT Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Name_as_it_Appears_on_Card__c</fullName>
        <label>Individual Name as it Appears on Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Level_Tour_Outcome__c</fullName>
        <label>Interest Level/Tour Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Interested</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks__c</fullName>
        <label>Interested in Number of Desk(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interior_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interior Designer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Interior Designer)</relationshipLabel>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Transfer_Encoded_ID__c</fullName>
        <label>Internal Transfer Encoded ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Transfer_Link__c</fullName>
        <formula>IF ( 
  AND (
    ISPICKVAL(Type__c, 'Internal Transfer')
  ),
  "https://payments.wework.com/membership_changes/" +  Internal_Transfer_Encoded_ID__c,
  "Not available, this is not an Internal Transfer"
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Transfer Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Calling__c</fullName>
        <label>International Calling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_From_Add_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is From Add Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_member_planning_to_move_out__c</fullName>
        <label>Is member planning to move out?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes-100%</fullName>
                </value>
                <value>
                    <fullName>Likely-75%</fullName>
                </value>
                <value>
                    <fullName>Unlikely-25%</fullName>
                </value>
                <value>
                    <fullName>No-0%</fullName>
                    <default>true</default>
                    <label>No-0%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Journey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journey</label>
        <referenceTo>Journey__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Followup_Date__c</fullName>
        <label>Last Followup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last__c</fullName>
        <formula>Primary_Member__r.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Primary Member Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout_Building__c</fullName>
        <label>Layout Building</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score_DateTime__c</fullName>
        <label>Lead Demographic Score DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score_Total__c</fullName>
        <label>Lead Demographic Score Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Demographic_Score__c</fullName>
        <description>Demographic lead score when the lead was converted.</description>
        <label>Lead Demographic Score</label>
        <precision>12</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Id_Text__c</fullName>
        <label>Lead Id (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <description>Id of the Lead from which this Opportunity was created.</description>
        <inlineHelpText>Id of the Lead from which this Opportunity was created.</inlineHelpText>
        <label>Lead Id</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <inlineHelpText>Enter the appropriate details regarding the source of the lead</inlineHelpText>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Signed_Date__c</fullName>
        <description>This field populates Building_to_Gate_A__c (Date) field from building onto opportunity. Created for ST-3004.</description>
        <formula>Building__r.Building_to_Gate_A__c</formula>
        <inlineHelpText>This field populates Building to Gate A (Date) field from building onto opportunity.</inlineHelpText>
        <label>Lease Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locations_Interested__c</fullName>
        <label>Locations Interested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMS-Labs</fullName>
                </value>
                <value>
                    <fullName>AMS-Metropool</fullName>
                </value>
                <value>
                    <fullName>AMS-Strawinskylaan</fullName>
                </value>
                <value>
                    <fullName>AMS-Weteringschans</fullName>
                </value>
                <value>
                    <fullName>ARC-Andres Arguibel 2860</fullName>
                </value>
                <value>
                    <fullName>ARC-Avenida Corrientes 800</fullName>
                </value>
                <value>
                    <fullName>ARC-Ing. Enrique Butty 275</fullName>
                </value>
                <value>
                    <fullName>ARC-Libertador 1000</fullName>
                </value>
                <value>
                    <fullName>ARC- Torre Bellini</fullName>
                </value>
                <value>
                    <fullName>ARG- Torre Bellini</fullName>
                </value>
                <value>
                    <fullName>ARN-Urban Escape</fullName>
                </value>
                <value>
                    <fullName>ATL-1372 Peachtree</fullName>
                </value>
                <value>
                    <fullName>ATL-3280 Peachtree Road NE</fullName>
                </value>
                <value>
                    <fullName>ATL-Colony Square</fullName>
                </value>
                <value>
                    <fullName>ATL-Tower Place</fullName>
                </value>
                <value>
                    <fullName>AUS-Congress</fullName>
                </value>
                <value>
                    <fullName>AUS-Domain</fullName>
                </value>
                <value>
                    <fullName>AUS-Labs</fullName>
                </value>
                <value>
                    <fullName>AUS-University Park</fullName>
                </value>
                <value>
                    <fullName>AUS-Westview</fullName>
                </value>
                <value>
                    <fullName>AUS-WeWork 801 Barton Springs</fullName>
                </value>
                <value>
                    <fullName>BCN-Diagonal 444</fullName>
                </value>
                <value>
                    <fullName>BHZ-Boulevard Shopping</fullName>
                </value>
                <value>
                    <fullName>BKK-Asia Centre</fullName>
                </value>
                <value>
                    <fullName>BKN-109 S 5th St</fullName>
                </value>
                <value>
                    <fullName>BKN-Brooklyn Heights</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Prospect)</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Sands)</fullName>
                </value>
                <value>
                    <fullName>BKN-Montague St.</fullName>
                </value>
                <value>
                    <fullName>BKN-Williamsburg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Looking_For_Number_Of_Desk__c</fullName>
        <formula>Account.Interested_in_Number_of_Desks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Looking For Number of Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Cultural fit</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
                <value>
                    <fullName>Contract Term</fullName>
                    <label>Contract Terms</label>
                </value>
                <value>
                    <fullName>Space config</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Parking (lack of)</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>Other WeWork Solution</fullName>
                </value>
                <value>
                    <fullName>Privacy Issues</fullName>
                </value>
                <value>
                    <fullName>Duplicate Opportunity</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail_and_Package_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will let us know whether or not to add the mail and package handling line item to an invoice.</inlineHelpText>
        <label>Mail and Package Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Contact_City__c</fullName>
        <formula>Primary_Member__r.MailingCity</formula>
        <label>Main Contact City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Contact_ID__c</fullName>
        <formula>Primary_Member__r.Id</formula>
        <label>Main Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Contact_Referrer__c</fullName>
        <formula>Primary_Member__r.Referrer__c</formula>
        <label>Main Contact Referrer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Contact_Winover_Competitor__c</fullName>
        <formula>text(Primary_Member__r.WinOver_Competitor__c )</formula>
        <label>Main Contact Winover Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Enter the market value from which the lead is coming</description>
        <inlineHelpText>Enter the market value from which the lead is coming</inlineHelpText>
        <label>Market [old]</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Arlington</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Bellevue</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Bronx</fullName>
                </value>
                <value>
                    <fullName>Brooklyn</fullName>
                </value>
                <value>
                    <fullName>Budapest</fullName>
                </value>
                <value>
                    <fullName>Buenos Aires</fullName>
                </value>
                <value>
                    <fullName>Cambridge</fullName>
                </value>
                <value>
                    <fullName>Cartagena</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Condesa / Hipodromo</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Detroit</fullName>
                </value>
                <value>
                    <fullName>Dubai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketplace_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketplace Listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Qualification__c</fullName>
        <formula>TEXT(Account.Member_Qualification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this field is set on the related Account</inlineHelpText>
        <label>Member Qualification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact. Contact status must be Active</description>
        <label>Member Referrer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Member Referrer)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership_Agreement_Notes__c</fullName>
        <label>Membership Agreement Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Merged_On__c</fullName>
        <description>This field populated when opportunity get merge into primary opportunity</description>
        <label>Merged On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Merged_Opprtunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contain id of primary opportunity in which current opportunity is merged</description>
        <label>Merged Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migrated_Follow_Up_Notes__c</fullName>
        <inlineHelpText>This field is used for the reference. DO NOT use to log any new notes. Use Activities instead.</inlineHelpText>
        <label>Migrated Follow Up Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Notice__c</fullName>
        <label>Minimum Notice (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Stay__c</fullName>
        <label>Minimum Stay (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Method__c</fullName>
        <label>Monthly Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Direct Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Phone_Fee_Text__c</fullName>
        <formula>IF(Monthly_Phone_Fee__c &lt; 0, "(", "") &amp; "$" &amp;
IF(ABS(Monthly_Phone_Fee__c) &gt;= 1000000, TEXT(FLOOR(ABS(Monthly_Phone_Fee__c) / 1000000)) &amp; ",", "") &amp;
IF(ABS(Monthly_Phone_Fee__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Monthly_Phone_Fee__c) / 1000)), 3) &amp; ",", "") &amp;
RIGHT(TEXT(FLOOR(ABS(Monthly_Phone_Fee__c))), 3) &amp; "." &amp;
IF(MOD(ABS(Monthly_Phone_Fee__c) , 1) * 100 &lt; 10, "0" &amp; TEXT(ROUND(MOD(ABS(Monthly_Phone_Fee__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Monthly_Phone_Fee__c) , 1), 2) * 100, 99))) &amp;
IF(Monthly_Phone_Fee__c &lt; 0, ")", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Phone Fee (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Phone_Fee__c</fullName>
        <label>Monthly Phone Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_B_W_Total__c</fullName>
        <label>Monthly Prints B&amp;W Total</label>
        <summarizedField>Opportunity_Reservable__c.Monthly_Prints_Copies_B_W__c</summarizedField>
        <summaryForeignKey>Opportunity_Reservable__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Color_Total__c</fullName>
        <label>Monthly Prints Color Total</label>
        <summarizedField>Opportunity_Reservable__c.Monthly_Prints_Copies_Color__c</summarizedField>
        <summaryForeignKey>Opportunity_Reservable__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Copies__c</fullName>
        <formula>"B&amp;W: "&amp;TEXT(Monthly_Prints_B_W_Total__c )&amp;"  Color: "&amp; TEXT(Monthly_Prints_Color_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Prints/Copies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>populated by an apex trigger</description>
        <inlineHelpText>Building from which the move out occurred</inlineHelpText>
        <label>Move Out Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Opportunity Move Outs ("from" another)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Move_Out_Cluster_Name__c</fullName>
        <formula>Move_Out_Building__r.Cluster_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cluster from which the move out occurred</inlineHelpText>
        <label>Move Out Cluster Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Cluster_Sales_Lead_Name__c</fullName>
        <formula>Move_Out_Building__r.Cluster_Sales_Lead_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move Out Cluster Sales Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Cluster_Sales_Manager_Name__c</fullName>
        <formula>Move_Out_Building__r.Cluster_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move Out Cluster Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Portfolio_Name__c</fullName>
        <formula>Move_Out_Building__r.Portfolio_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Portfolio from which the move out occurred</inlineHelpText>
        <label>Move Out Portfolio Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Portfolio_Sales_Manager_Name__c</fullName>
        <formula>Move_Out_Building__r.Portfolio_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move Out Portfolio Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Region_Name__c</fullName>
        <formula>Move_Out_Building__r.Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Region from which the move out occurred</inlineHelpText>
        <label>Move Out Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Regional_Sales_Manager_Name__c</fullName>
        <formula>Move_Out_Building__r.Regional_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move Out Regional Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Territory_Name__c</fullName>
        <formula>Move_Out_Building__r.Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Territory from which the move out occurred</inlineHelpText>
        <label>Move Out Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Territory_Sales_Manager_Name__c</fullName>
        <formula>Move_Out_Building__r.Territory_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Move Out Territory Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_outs_Closed_Lost__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If move outs are present and move ins are null that time, If Contract Stage == 'Contract Signed' then keep Opportunity StageName = ' Closed Lost'.</description>
        <inlineHelpText>If move outs are present and move ins are null that time, If Contract Stage == 'Contract Signed' then keep Opportunity StageName = ' Closed Lost'.</inlineHelpText>
        <label>Move outs Closed Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Decision_Maker__c</fullName>
        <label>Email of Decision Maker</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Negotiated_Price__c</fullName>
        <label>Negotiated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Desks__c</fullName>
        <inlineHelpText>Total Reservables - Total Move Outs aka Total Reservalbes (net)</inlineHelpText>
        <label>Net Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Override__c</fullName>
        <inlineHelpText>when non-blank this will override the value of No. Desks (unweighted) &amp; No. Desks (weighted)
&gt;&gt;&gt;use this when consolidating move-outs across multiple opportunities during a transfer OR commitment term extension</inlineHelpText>
        <label>Net Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_TCV_Building__c</fullName>
        <label>Net TCV Building</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_TCV_Local_Payload__c</fullName>
        <label>Net TCV Local (Payload)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_TCV_Portfolio_market__c</fullName>
        <label>Net TCV Portfolio (market)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_TCV_Region__c</fullName>
        <label>Net TCV Region</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_TCV_Territory__c</fullName>
        <label>Net TCV Territory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_TCV_Unweighted_Formula__c</fullName>
        <description>Net TCV (Unweighted)</description>
        <formula>IF(
				ISBLANK(Net_TCV_unweighted__c),
        (Gross_Term_TCV__c*Gross_Quantity_TCV__c*Gross_Price_TCV_total__c) - (Remaining_Price_TCV__c*Remaining_Quantity_TCV__c*Remaining_Term_TCV__c),
        Net_TCV_unweighted__c
)</formula>
        <label>Net TCV (Unweighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_TCV_Weighted_Formula__c</fullName>
        <formula>IF(
 			ISBLANK(Net_TCV_Weighted__c),
				Net_TCV_Unweighted_Formula__c * Probability,
    Net_TCV_Weighted__c
)</formula>
        <label>Net TCV (Weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_TCV_Weighted__c</fullName>
        <label>Net TCV (Weighted) Payload</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_TCV_unweighted__c</fullName>
        <label>Net TCV (unweighted) Payload</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Monthly_Conference_Room_Credits__c</fullName>
        <label>Network Monthly Conference Room Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Monthly_Membership_Fee__c</fullName>
        <label>Network Monthly Membership Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network_Set_Up_Fee__c</fullName>
        <label>Network Set-Up Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>